2002-11-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclBasic.c (Tcl_CloneInterp): Moved 'TclCreateExecEnv'
	  behind 'CloneNamespace'. This fixes the last leak found. The
	  function creates a variable 'tcl_traceExec', and links a C
	  variable to it. Running 'CloneNamespace' afterward overwrites
	  the pointer, leaking the structure created by
	  'TclCreateExecEnv'.

2002-11-26  Andreas Kupries  <andreask@activestate.com>

	* tclBasic.c (CloneVariable): The initialization of the refCount
	  for the cloned variable assumed that all variables are namespace
	  variables. This is not true. Globals are not marked as in a
	  namespace. This caused the system to skip freeing all global
	  variables in a cloned interpreter. Changed to explicitly check
	  the variable if it is namespace'd.

2002-11-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/__clone.test: rename to allow it to be lexically first.

	* generic/tclLiteral.c (TclGlobalLiteralTable): add a thread exit
	handler to remove remaining literals on thread exit.

	* generic/tclMain.c (Tcl_Main):	added Tcl_DeleteInterp and
	* unix/tclAppInit.c (main):	Tcl_Finalize in -DPURIFY case to
					help indentify memory leaks.

2002-11-08  Andreas Kupries  <andreask@activestate.com>

	* generic/tclProc.c (TclCloneProc): Helper for Tcl_CloneInterp. 

	* generic/tclBasic.c: Line 3843ff: New Tcl_CloneInterp public API.

2002-11-07  Andreas Kupries  <andreask@activestate.com>

	* generic/tclProc.c (TclCloneProc): See below. New function.

	* generic/tclBasic.c: Tcl_Clone... functions. New. Tcl_CloneInterp
	  is main entry into this.

2002-11-07  Andreas Kupries  <andreask@activestate.com>

	* Part of work on more sharing of bytecode information between
	  structurally equivalent interpreters.

	* generic/tclCompile.c (EncodeCmdLocMap): Operate on ByteCodeData
	  instead of ByteCode.
	  (TclCleanupByteCode): Deref to ByteCodeData in numerous places.
	  (TclInitByteCodeObj): s.a.
	  (TclPrintByteCodeObj): s.a.